1999-08-17  Havoc Pennington  <hp@pobox.com>

	* libgnome.h: comment about gnome-paper.h

1999-08-14  Morten Welinder  <terra@diku.dk>

	* gnome-config.c (access_config_extended): Add small cache.  Huge
 	win on systems with NFS.

1999-08-01  Morten Welinder  <terra@diku.dk>

	* gnome-i18n.c (explode_locale): Return modifier in "modifier",
 	not in "territory".
	(compute_locale_variants): Plug a pile of leaks.
	(gnome_i18n_get_language_list): Plug leak.

1999-08-01	<sopwith@redhat.com>
	* gnomelib-init.c: g_set_prgname(app_id);

1999-07-13    <hp@dhcpd7.redhat.com>

	* gnome-util.c: Remove g_filename_index() and g_filename_pointer()
	cruft (already #if 0)
	(gnome_datadir_file): wrong function name in inline docs
	
1999-06-12  Miguel de Icaza  <miguel@gnu.org>

	* gnome-paper.c (paper_init): Push an empty configuration prefix. 

1999-07-04  Owen Taylor  <otaylor@redhat.com>

	* gnome-i18n.c (compute_locale_variants): Look for
	variants of supplied locale value - e.g., for 
	ja_JP.ujis, look (in order) for ja_JP.ujis, 
	ja_JP, ja.ujis, and ja.

1999-06-28  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-magic.c (read_string_val): Added break on default clause
	to make it compile with some machines.

1999-06-28  Miroslav Silovic  <silovic@zesoi.fer.hr>

	* gnome-config.h (gnome_config_private_clean_section):
	(gnome_config_private_has_section): replaced Path with path. This
 	seems like an obvious typo, and made apps that call these with any
 	input paremeter other than path fail to compile

1999-06-20  Michael Zucchi  <mzucchi@zedzone.mmc.com.au>

	* gnome-magic.c (read_string_val): Add a limit on the buffer size
	we will read into, and rewritten to be a little more robust.
	Too long records will be truncated silently.
	See bug  #657, #933, #1018 and #591.

	* Makefile.am (INCLUDES): Added ADIOFILE_CFLAGS and ESD_CFLAGS to
	includes list, to allow different installation location.
	(see bug #748)

1999-06-02  Miguel de Icaza  <miguel@nuclecu.unam.mx>
